fix flicker

--- a/source/sass/utility/_text.scss
+++ b/source/sass/utility/_text.scss
@@ -268,7 +268,7 @@ small,
     &:hover {
         background-color: #fff;
         width: auto;
-        overflow: visible;
+        overflow: auto;
     }
 }
 
